fix audience issue

--- a/.gitignore
+++ b/.gitignore
@@ -363,4 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 
 Salubrity.Api/appsettings.Production.json
-Salubrity.Api/appsettings.json
+#Salubrity.Api/appsettings.json
