--- a/Salubrity.Api/appsettings.json
+++ b/Salubrity.Api/appsettings.json
@@ -22,5 +22,10 @@
     "DefaultConnection": "Server=localhost;Database=SalubrityDb;Integrated Security=True;TrustServerCertificate=True;"
   },
 
+  "JwtSettings": {
+    "Issuer": "Salubrity",
+    "Audience": "SalubrityClient"
+  },
+
   "AllowedHosts": "*"
 }
