added employee management

--- a/Salubrity.Api/appsettings.Production.json
+++ b/Salubrity.Api/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=salubrity;Username=salubrity_user;Password=Salubrity2024!"
+    "DefaultConnection": "Host=localhost;Database=salubrity;Username=postgres;Password=sarahGathoni"
   }
 }
