--- a/Salubrity.Api/appsettings.json
+++ b/Salubrity.Api/appsettings.json
@@ -19,7 +19,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=SalubrityDb;Integrated Security=False;TrustServerCertificate=False;"
+    "DefaultConnection": "Server=localhost;Database=SalubrityDb;Integrated Security=True;TrustServerCertificate=True;"
   },
 
   "JwtSettings": {
