--- a/.gitignore
+++ b/.gitignore
@@ -362,5 +362,5 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-#Salubrity.Api/appsettings.Production.json
-#Salubrity.Api/appsettings.json
+Salubrity.Api/appsettings.Production.json
+Salubrity.Api/appsettings.json
