--- a/Salubrity.Application/Salubrity.Application.csproj
+++ b/Salubrity.Application/Salubrity.Application.csproj
@@ -14,6 +14,9 @@
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.12.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
+    <PackageReference Include="MailKit" Version="4.3.0" />
+    <PackageReference Include="Scriban" Version="5.7.0" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.54" />
   </ItemGroup>
 
 
