--- a/Salubrity.Infrastructure/Salubrity.Infrastructure.csproj
+++ b/Salubrity.Infrastructure/Salubrity.Infrastructure.csproj
@@ -23,7 +23,9 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.6" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     <PackageReference Include="Otp.NET" Version="1.4.0" />
+    <PackageReference Include="QRCoder" Version="1.6.0" />
     <PackageReference Include="System.Linq.Async" Version="6.0.3" />
+    
   </ItemGroup>
 
   <PropertyGroup>
