Add poster QR download endpoint to CampController

--- a/Salubrity.Api/appsettings.Development.json
+++ b/Salubrity.Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Storage": {
+    "PublicRoot": "wwwroot",
+    "PublicBaseUrl": "https://api-salubrity.dataposit.co.ke"
   }
 }
