--- a/Salubrity.Api/Salubrity.Api.csproj
+++ b/Salubrity.Api/Salubrity.Api.csproj
@@ -33,4 +33,11 @@
     <ProjectReference Include="..\Salubrity.Shared\Salubrity.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="EmailTemplates\**\*.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+
 </Project>
