Include EmailTemplates and wwwroot in publish output for static access (QR codes, templates)

--- a/Salubrity.Api/Salubrity.Api.csproj
+++ b/Salubrity.Api/Salubrity.Api.csproj
@@ -41,7 +41,12 @@
   </Content>
 </ItemGroup>
 
-
+<ItemGroup>
+  <Content Include="..\wwwroot\**\*.*">
+    <Link>wwwroot\%(RecursiveDir)%(Filename)%(Extension)</Link>
+    <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+  </Content>
+</ItemGroup>
 
 
 </Project>
