--- a/Salubrity.Application/Salubrity.Application.csproj
+++ b/Salubrity.Application/Salubrity.Application.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="ClosedXML" Version="0.105.0" />
     <PackageReference Include="CsvHelper" Version="33.1.0" />
     <PackageReference Include="EPPlus" Version="8.1.1" />
     <PackageReference Include="FluentValidation" Version="12.0.0" />
