Feat: Database Dump Endpoint

--- a/Salubrity.Api/appsettings.Development.json
+++ b/Salubrity.Api/appsettings.Development.json
@@ -8,5 +8,8 @@
   "Storage": {
     "PublicRoot": "wwwroot",
     "PublicBaseUrl": "https://api-salubrity.dataposit.co.ke"
+  },
+  "DatabaseDump": {
+    "Directory": "C:\\DbDumps"
   }
 }
