--- a/Salubrity.Api/appsettings.Development.json
+++ b/Salubrity.Api/appsettings.Development.json
@@ -10,6 +10,6 @@
     "PublicBaseUrl": "https://api-salubrity.dataposit.co.ke"
   },
   "DatabaseDump": {
-    "Directory": "C:\\DbDumps"
+    "Directory": "/var/dbdumps"
   }
 }
