Fix: Updates on Get All Participants

--- a/Salubrity.Api/appsettings.Development.json
+++ b/Salubrity.Api/appsettings.Development.json
@@ -8,5 +8,12 @@
   "Storage": {
     "PublicRoot": "wwwroot",
     "PublicBaseUrl": "https://api-salubrity.dataposit.co.ke"
+  },
+  "JwtSettings": {
+    "Issuer": "Salubrity",
+    "Audience": "SalubrityClient"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=salubrity;Username=postgres;Password=dpmakumi;"
   }
 }
